fix: component in swagger
